fix image expanding offscreen in mobile

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -9,7 +9,7 @@
 }
 
 .blg-img {
-  padding: 10px;
+  padding: 5px;
   margin: 0 auto;
   display: block;
   max-width: 100%;
